# openfv

./: #sa-ptv.cpp#  .CMakeLists.txt.swp  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Dockerfile  LICENSE  Makefile  P_mats_nodiff.csv  README.md  calibrate.cpp~  cmake_install.cmake  configure  configure.sh  contributors.txt  index.html  io.cpp~  io.h~  refocus.cpp~  sa-ptv  sa-ptv.cpp  sa-ptv.cpp~
ba_files/: scene.txt~
calib/python/: RUNcalibration.py  RefractiveCameraCalibration.ipynb  config_file.cfg  environment.yaml  freeformCalib.py  pinCalib.py  pinhole.ipynb  refCalib.py  refCalibTest.py
doc/: Makefile  calibration_doc.tex~  config  refocusing_doc.aux  refocusing_doc.out  refocusing_doc.tex
doc/html/: annotated.html  classes.html  dir_0f902051af55e5487cf3a40b0c728bcb.html  dir_4af99122718de9ae5811efc359734df1.html  dir_52b4bcf13fc90a240fc46df051b74907.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html
doc/latex/: annotated.tex  dir_0f902051af55e5487cf3a40b0c728bcb.tex  dir_4af99122718de9ae5811efc359734df1.tex  dir_52b4bcf13fc90a240fc46df051b74907.tex  doxygen.sty  files.tex  refman.tex
doc/source/: calibration.rst  conf.py  data_types.rst  file_formats.rst  index.rst  refocusing.rst  rendering.rst  setup.rst  tools.rst  tutorial.rst  utility_functions.rst
docker/: .RepoDockerfile.swp  2Dockerfile  Dockerfile  Dockerfile.base  Makefile  RepoDockerfile  build_images  live-refocus
docker/base-no-cuda/: Dockerfile
docker/base-notebook/: Dockerfile  start-notebook.sh
docker/cuda/: Dockerfile  Dockerfile.base
docker/minimal-notebook/: Dockerfile
docker/scipy-notebook/: Dockerfile
docs/: config  openfv_python_doc_build.py  update_docs
docs/source/: conf.py  cpp_api_docs.rst  file_formats.rst  localization.rst  py_api_docs.rst  refocusing.rst  setup.rst  tutorial.rst
include/: CMakeLists.txt  batchProc.h  calibration.h  cuda_lib.h  featureDetection.h  lib_include.h  lib_include.h~  openfv.h  optimization.h  optimization.h~  pLoc.h  parse_safe_settings.h  parse_settings.h  piv.h  py_sa-ptv.h  refocusing.h  rendering.h  safeRefocusing.h  serialization.h  std_include.h  stdinclude.h~  tools.h  tracking.h  typedefs.h  visualize.h
include/numpy-opencv-converter/: container.h  conversion.h  np_opencv_converter.hpp  template.h
include/openfv/: batchProc.h  calibration.h  cuda_lib.h  openfv.h  optimization.h  pLoc.h  parse_settings.h  piv.h  refocusing.h  rendering.h  safeRefocusing.h  serialization.h  std_include.h  tools.h  tracking.h  typedefs.h  visualize.h
include/openfv/legacy/: calibration.h  featureDetection.h  optimization.h  visualize.h
lib/: #tracking.cpp#  .#tracking.cpp  CMakeLists.txt  CMakeLists.txt~  Makefile  calibration.cpp  calibration.h  calibration.h~  cmake_install.cmake  io.h~  io_calibrate.cpp  io_calibrate.h  io_refocusing.cpp  io_refocusing.cpp~  io_refocusing.h  optimization.cpp  optimization.cpp~  optimization.h  optimization.h~  pLoc.cpp  pLoc.cpp~  pLoc.h  pLoc.h~  processing_calibrate.cpp  processing_calibrate.cpp~  processing_calibrate.h  processing_refocusing.cpp  processing_refocusing.cpp~  processing_refocusing.h  processing_refocusing.h~  refocusing.cpp  refocusing.cpp~  refocusing.h  refocusing.h~  tools.cpp  tools.h  tracking.cpp  tracking.h  tracking.h~  typedefs.h  (+5 more)
matlab/: Makefile  P_mats.txt  Rt.txt  aligned_rt.txt  camera_model.m  camera_points.txt  f.txt  p_validate.m  particle_locations.m  particle_locations.m~  particles.txt  particles10.txt  particles_blender.txt  piv_sim_10.txt  piv_sim_500.txt  plane_params.txt  plot_points.m~  results.m  results.m~  synthetic_3d_vort_ring_generator_YZ_plane.m  todo  vortex_points.txt  vortex_points_rare.txt  vortex_ring.m  world_points.txt  zres.txt
matlab/particle_sim/: particles_10.txt  particles_500.txt  piv_sim_10.txt  piv_sim_100.txt  piv_sim_1000.txt  piv_sim_1500.txt  piv_sim_250.txt  piv_sim_50.txt  piv_sim_500.txt  piv_sim_750.txt
matlab/piv/: PIV_3d.m  definePIVOptions.m
matlab/scripts/: SAPIV.m  calcQ.m  (+21 more)
py_scripts/: #plot_points.py#  movie_vortex.py  movie_vortex.py~  output.avi  plot_points.py  plot_points.py~  vortex.py  vortex.py~  vortex_1.py
python/: detected_movie.py~  vortex_1.py~
readme/: README.md  README.md.orig  sample_config_file.cfg
samples/: CMakeLists.txt  calibrate.cpp  demo.cpp  jobFind.cpp  liveRefocus.cpp  refocus.cpp  sa-ptv.cpp  safeRefocus.cpp  test.cpp  testing.cpp  track.cpp
samples/calib/: exptRefract.cfg  syntheticPin.cfg  syntheticRefract.cfg
samples/calib/syntheticRefract/calibration_results/: calibration_results_SAMPLE.mat  calibration_results_SAMPLE.txt
samples/sample_data/: sample_config.cfg  settings.cfg
samples/sample_data/calibration_data/calibration_results/: #results1.txt#  results2.txt  results_000001438970105.txt
samples/sample_data/set2_blobs/: config.txt
src/: CMakeLists.txt  Makefile  bundle_adjustment.h~  calibrate.cpp  calibration.cpp  calibration.cpp~  cuda_lib.cu  io.cpp~  io_calibrate.cpp~  io_calibrate.h~  io_refocusing.h~  liveRefocus.cpp  optimization.cpp  pLoc.cpp  processing.cpp~  processing.h~  processing_calibrate.h~  refocus.cpp  refocusing.cpp  refocusing.h~  sa-ptv.cpp  tools.cpp  tools.h~  track.cpp  tracking.cpp  tracking.cpp~  visualize.cpp
src/cmake/: boost-python.cmake
src/execs/: calibrate.cpp  refocus.cpp  sa-ptv.cpp  track.cpp
src/modules/: batchProc.cpp  calibration.cpp  cuda_lib.cu  featureDetection.cpp  optimization.cpp  pLoc.cpp  parse_safe_settings.cpp  parse_settings.cpp  piv.cpp  py_sa-ptv.cpp  refocusing.cpp  rendering.cpp  safeRefocusing.cpp  tools.cpp  tracking.cpp  visualize.cpp
src/modules/legacy/: batchProc.cpp  calibration.cpp  featureDetection.cpp  safeRefocusing.cpp
src/numpy-opencv-converter/: conversion.cpp  np_opencv_converter.cpp  np_opencv_module.cpp
src/tools/: sa_reconstruct.cpp
temp/: ba_data.txt  particles.txt  plane_fitting.txt  vortex_particles.txt  window1.txt  window2.txt
test/: test.cpp  test.py
(+288 files in other folders)
